Cleaned up code and updated the README file